syntax = "proto3";
package profile;

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option go_package = "profile";


option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
      title: "Gizmo profile";
      version: "1.0";
      contact: {
        name: "Gizmo project";
        url: "https://github.com/pondohva/gw";
        email: "ar.gadelshin@gmail.com";
      };
    };
    // Overwriting host entry breaks tests, so this is not done here.
    external_docs: {
      url: "https://github.com/pondohva/gw";
      description: "Gizmo Rest->GRPC gateway";
    };
    host: "35.189.99.17";
    schemes: HTTP;
    schemes: HTTPS;
    schemes: WSS;
    consumes: "application/json";
    produces: "application/json";
  };

service Profile {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_tag) = {
		description: "Operate profile service"
		external_docs: {
			url: "https://github.com/pondohva/profile";
			description: "Find out more about Profile";
		}
	};
    rpc GetProfile(GetProfileByIDRequest) returns (GetProfileByIDResponse) {
        option (google.api.http) = {
            get: "/v1/profile/{ID}"
        };
        option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
            deprecated: false
            description: "Return profile info"
            external_docs: {
                url: "https://github.com/pondohva/gw";
                description: "Find out more about GetProfile";
            }
        };
    }
}

message GetProfileByIDRequest {
    string ID = 1;
}

message GetProfileByIDResponse {
    string ID = 1;
    string UserName = 2;
    string Country = 3;
}
